# smpool_bridge

./: .gitignore  CMakeLists.txt  Makefile
components/WIFIManager/: CMakeLists.txt
components/bridge_core/: CMakeLists.txt  Kconfig.projbuild  bridge_core.c
components/bridge_core/include/: bridge_core.h
components/my_espnow/: CMakeLists.txt  my_espnow.c
components/my_espnow/include/: my_espnow.h
components/my_mqtt/: CMakeLists.txt  my_mqtt.c
components/my_mqtt/include/: my_mqtt.h
main/: main.c  main.cpp
